improvement: allow to ping or jump to LMS map from customernodesbox

--- a/templates/default/customer/customernodesbox.html
+++ b/templates/default/customer/customernodesbox.html
@@ -73,17 +73,16 @@
 			<div class="lms-ui-tab-table-row{if !$node.access} blend{/if}" data-target-url="?m=nodeinfo&id={$node.id}">
 				<div class="lms-ui-tab-table-wrapper col-7">
 					<div class="lms-ui-tab-table-wrapper col-3">
-						<div class="lms-ui-tab-table-column name">
+						<div class="lms-ui-tab-table-column name lms-ui-ignore-target-url">
 							{if $node.lastonline}
 								{if ($smarty.now-$node.lastonline) > $lastonline_limit}
-									<i class="lms-ui-icon-nodeoff" {tip a=$node.lastonlinedate text="Last online: \$a"}></i>
+									{button icon="nodeoff" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name}
 								{else}
-									<i class="lms-ui-icon-nodeon" {tip a="on-line" text="Last online: \$a"}></i>
+									{button icon="nodeon" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name tip="{tip a="on-line" text="Last online: \$a"}"}
 								{/if}
 							{else}
-								<i class="lms-ui-icon-nodeunk"></i>
+								{button icon="nodeunk" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name}
 							{/if}
-							<strong>{$node.name}</strong>
 							{if $node.locked}{icon name="lock" tip="<!node>lock is active" class="node-lock-icon"}{/if}
 							{if isset($nodeassignments[$node.id])}
 								({foreach $nodeassignments[$node.id] as $assignment}<a href="?m=customerassignmentedit&id={$assignment.id}"><span
@@ -91,11 +90,11 @@
 										{if !$assignment.commited} lms-ui-assignment-not-commited{/if}">{$assignment.name}</span></a>{if !$assignment@last}, {/if}{/foreach})
 							{/if}
 							{if $node.location}<BR>
-								<span class="nobr">
+								<span class="nobr" class="lms-ui-ignore-target-url">
 									{if $node.teryt}
-										{t a=$node.location|truncate:60:"&hellip;":true}$a (TERRIT){/t}
+										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}"} {t a=$node.location|truncate:60:"&hellip;":true}$a (TERRIT){/t}</a>
 									{else}
-										{$node.location|truncate:60:"&hellip;":true}
+										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}" label="{$node.location|truncate:60:"&hellip;":true}" }
 									{/if}
 								</span>
 							{/if}
