changed truncate -> trunescape

--- a/templates/default/customer/customernodesbox.html
+++ b/templates/default/customer/customernodesbox.html
@@ -92,9 +92,9 @@
 							{if $node.location}<BR>
 								<span class="nobr" class="lms-ui-ignore-target-url">
 									{if $node.teryt}
-										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}"} {t a=$node.location|truncate:60:"&hellip;":true}$a (TERRIT){/t}</a>
+										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}"} {t a=$node.location|trunescape:60}$a (TERRIT){/t}</a>
 									{else}
-										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}" label="{$node.location|truncate:60:"&hellip;":true}" }
+										{button icon="map" type="link" href="?m=netdevmap&nodeid={$node.id}" label="{$node.location|trunescape:60}" }
 									{/if}
 								</span>
 							{/if}
