--- a/templates/default/customer/customernodesbox.html
+++ b/templates/default/customer/customernodesbox.html
@@ -76,12 +76,12 @@
 						<div class="lms-ui-tab-table-column name lms-ui-ignore-target-url">
 							{if $node.lastonline}
 								{if ($smarty.now-$node.lastonline) > $lastonline_limit}
-									{button icon="nodeoff" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name}
+									{button icon="nodeoff" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name tip="{trans("Last online:")} {$node.lastonline_date}"}
 								{else}
-									{button icon="nodeon" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name tip="{tip a="on-line" text="Last online: \$a"}"}
+									{button icon="nodeon" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name tip="online"}
 								{/if}
 							{else}
-								{button icon="nodeunk" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name}
+								{button icon="nodeunk" type="link" onclick="ping_popup('{$node.ip}')" label=$node.name tip="unknown"}
 							{/if}
 							{if $node.locked}{icon name="lock" tip="<!node>lock is active" class="node-lock-icon"}{/if}
 							{if isset($nodeassignments[$node.id])}
