--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -162,17 +162,20 @@
 				<strong>{trans("Period:")}</strong>
 			</td>
 			<td>
+				{$allow_past_date = ConfigHelper::checkValue(ConfigHelper::getConfig('documents.allow_past_date', 'true'))}
 				{trans("from:")}
 				<input type="text" name="document[fromdate]" id="fromdate"
 					value="{if $document.fromdate}{$document.fromdate}{/if}"
 					placeholder="{trans("yyyy/mm/dd")}"
 					{tip class="lms-ui-date lms-ui-date-unix" text="Enter start date in YYYY/MM/DD format (optional)" trigger="fromdate"}
+					{if !$allow_past_date}data-min-date="{date('Y-m-d')}"{/if}
 					size="10">&nbsp;
 				{trans("to:")}
 				<input type="text" name="document[todate]" id="todate"
 					value="{if $document.todate}{$document.todate}{/if}"
 					placeholder="{trans("yyyy/mm/dd")}"
 					{tip class="lms-ui-date lms-ui-date-unix" text="Enter end date in YYYY/MM/DD format (optional)" trigger="todate"}
+					{if !$allow_past_date}data-min-date="{date('Y-m-d')}"{/if}
 					size="10">
 			</td>
 		</tr>
