bugfix: don't allow to set deadline date earlier than creation date in invoice and invoice note forms

--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -110,7 +110,7 @@
 					{trans("Deadline:")}
 				</td>
 				<td class="nobr">
-					{deadline_selection name="invoice[deadline]" cdate_selector="#cdate" value=$invoice.deadline}
+					{deadline_selection name="invoice[deadline]" id="deadline" cdate_selector="#cdate" value=$invoice.deadline}
 				</td>
 			</tr>
 			<tr>
