--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -177,7 +177,7 @@
 					{trans("Deadline:")}
 				</td>
 				<td class="nobr">
-					{deadline_selection name="cnote[deadline]" cdate_selector="#cdate" value=$cnote.deadline}
+					{deadline_selection name="cnote[deadline]" id="deadline" cdate_selector="#cdate" value=$cnote.deadline}
 				</td>
 			</tr>
 			<tr>
