--- a/templates/default/message/messageinfo.html
+++ b/templates/default/message/messageinfo.html
@@ -181,6 +181,8 @@
 				<OPTION value="{$smarty.const.MSG_SENT}"{if $listdata.status == $smarty.const.MSG_SENT} SELECTED{/if}>{trans("sent<!plural>")}</OPTION>
 				<OPTION value="{$smarty.const.MSG_ERROR}"{if $listdata.status == $smarty.const.MSG_ERROR} SELECTED{/if}>{trans("errornous<!plural>")}</OPTION>
 				<OPTION value="{$smarty.const.MSG_DELIVERED}"{if $listdata.status == $smarty.const.MSG_DELIVERED} SELECTED{/if}>{trans("delivered<!plural>")}</OPTION>
+				<OPTION value="{$smarty.const.MSG_CANCELLED}"{if $listdata.status == $smarty.const.MSG_CANCELLED} selected{/if}>{trans("cancelled<!plural>")}</OPTION>
+				<OPTION value="{$smarty.const.MSG_BOUNCED}"{if $listdata.status == $smarty.const.MSG_BOUNCED} selected{/if}>{trans("bounced<!plural>")}</OPTION>
 			</SELECT>
 			&nbsp;<A href="javascript: document.page.submit();">&raquo;&raquo;&raquo;</A>
 			</FORM>
@@ -226,6 +228,10 @@
 				{trans("errornous")}{if $item.error} ({$item.error|escape}){/if}
 			{elseif $item.status == $smarty.const.MSG_DELIVERED}
 				{trans("delivered")} ({$item.lastdate|date_format:"%Y/%m/%d %H:%M"})
+			{elseif $item.status == $smarty.const.MSG_CANCELLED}
+				{trans("cancelled")} ({$item.lastdate|date_format:"%Y/%m/%d %H:%M"})
+			{elseif $item.status == $smarty.const.MSG_BOUNCED}
+				{trans("bounced")} ({$item.lastdate|date_format:"%Y/%m/%d %H:%M"})
 			{else}
 				{trans("waiting")}
 			{/if}
