--- a/templates/default/rt/rtqueuemodify.html
+++ b/templates/default/rt/rtqueuemodify.html
@@ -458,7 +458,7 @@
 										{capture assign="tip"}
 											{trans("Body of mail sent after new ticket is created")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - new ticket body.<br>")}
 										{/capture}
 										<textarea name="queue[newticketbody]" rows="10" form="queue-form"
 											class="lms-ui-box-field-value"
@@ -494,7 +494,7 @@
 										{capture assign="tip"}
 											{trans("Body of mail sent after new message is added")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - new message body.<br>")}
 										{/capture}
 										<textarea name="queue[newmessagebody]" rows="10" form="queue-form"
 											class="lms-ui-box-field-value"
@@ -530,7 +530,7 @@
 										{capture assign="tip"}
 											{trans("Body of mail sent after ticket is resolved")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - ticket last message body.<br>")}
 										{/capture}
 										<textarea name="queue[resolveticketbody]" rows="10" form="queue-form"
 												  class="lms-ui-box-field-value"
@@ -552,7 +552,7 @@
 										{capture assign="tip"}
 											{trans("SMS sent after new ticket is created")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - new ticket body.<br>")}
 										{/capture}
 										<textarea name="queue[newticketsmsbody]" rows="10" form="queue-form"
 											class="lms-ui-box-field-value"
@@ -570,7 +570,7 @@
 										{capture assign="tip"}
 											{trans("SMS sent after new message is added")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - new message body.<br>")}
 										{/capture}
 										<textarea name="queue[newmessagesmsbody]" rows="10" form="queue-form"
 											class="lms-ui-box-field-value"
@@ -588,7 +588,7 @@
 										{capture assign="tip"}
 											{trans("SMS sent after ticket is resolved")}
 											<br>
-											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title.<br>")}
+											{trans("<!customer-notification-body>The following special symbols are supported:<br><strong>%tid</strong> - ticket identifier,<br><strong>%cid</strong> - customer identifier,<br><strong>%pin</strong> - customer PIN,<br><strong>%customername</strong> - customer full name,<br><strong>%title</strong> - ticket title,<br><strong>%body</strong> - ticket last message body.<br>")}
 										{/capture}
 										<textarea name="queue[resolveticketsmsbody]" rows="10" form="queue-form"
 											class="lms-ui-box-field-value"
