improvement: dedicated css classes for message statuses (lms-ui-message-*); message status color marking description hint in customer messages box

--- a/css/style.less
+++ b/css/style.less
@@ -2664,3 +2664,24 @@ fieldset {
 		height: 100%;
 	}
 }
+
+.lms-ui-message-new {
+	color: inherit;
+}
+
+.lms-ui-message-delivered {
+	color: green;
+}
+
+.lms-ui-message-sent {
+	color: @blend;
+}
+
+.lms-ui-message-cancelled {
+	color: @warning-text;
+}
+
+.lms-ui-message-error,
+.lms-ui-message-bounced {
+	color: @error-text;
+}
