enhancement: radius disconnect send support from within node info view enhancement: 'phpui.default_radius_secret' with empty default value controls what radius secret is used when network device corresponding nas ip address is not defined enhancement: 'phpui.radius_disconnect_command' with 'Framed-IP-Address=\"%ip%\"' |radclient %nasip%:3799 disconnect '%secret%'' as default value defines default radius disconnect command which is used during node session disconnect request

--- a/templates/default/node/nodeinfobox.html
+++ b/templates/default/node/nodeinfobox.html
@@ -536,6 +536,10 @@
 																<!last-nas>$a
 															{/strip}{/t}
 														{/if}
+														{if $online}
+															{button type="link" icon="reload" class="radius-disconnect-button"
+																data_nodesession_id=$nodesession.id tip="Disconnect existing session"}
+														{/if}
 													</div>
 												</td>
 											</tr>
@@ -581,10 +585,9 @@
 </table>
 
 <script>
-    xajax_getNodeStats({$nodeinfo.id});
 
-	$(function() {
-	    {if !$disable_active_links}
+    $(function() {
+        {if !$disable_active_links}
         var link = '?m=nodeedit&id={$nodeinfo.id}';
         var nodeid = {$nodeinfo.id};
 
@@ -627,6 +630,33 @@
 		$('.mac-address-copy-to-clipboard').on('lms:clipboard:click', function() {
 			return $(this).closest('tr').find('.mac-address').text().trim();
 		});
+
+		var disconnectButton = $('.radius-disconnect-button');
+		disconnectButton.click(function() {
+			disconnectButton.prop('disabled', true).attr('disabled', '');
+			$.ajax({
+				url: "?m=nodesession&action=disconnect&id=" + disconnectButton.attr('data-nodesession-id'),
+				dataType: "json",
+				success: function(data, textStatus, qXHR) {
+					disconnectButton.prop('disabled', false).removeAttr('disabled');
+					if (data.hasOwnProperty("error")) {
+						alertDialog(data.error, disconnectButton);
+					}
+				},
+				error: function(jqXHR, textStatus, errorThrown) {
+					disconnectButton.prop('disabled', false).removeAttr('disabled');
+					alertDialog($t("AJAX: Invalid result - status: $a", textStatus), disconnectButton);
+				}
+			});
+		});
+	});
+
+	$.ajax({
+		url: "?m={$layout.module}&id={$nodeinfo.id}&action=get_node_stats",
+		dataType: "html",
+		success: function(data) {
+			$("#nodeinfo").append(data);
+		}
 	});
 
 	function change_netdevice(id) {
