improvement: smarty function '{reset_to_defaults}' supports '{customerlist}' selection reset (lms-ui-distinguished css class support)

--- a/css/less/customer-select.less
+++ b/css/less/customer-select.less
@@ -106,4 +106,21 @@ label > .lms-ui-customer-select-container {
       }
     }
   }
+
+  &.lms-ui-distinguished {
+    select {
+      border: @warning-outline;
+      box-shadow: @warning-box-shadow;
+
+      &:focus {
+        border: @warning-outline-focus;
+        box-shadow: @warning-box-shadow-focus;
+      }
+    }
+
+    .lms-ui-customer-select-name {
+      border: @warning-outline;
+      box-shadow: @warning-box-shadow;
+    }
+  }
 }
