--- a/templates/default/rt/rtnetdevs.html
+++ b/templates/default/rt/rtnetdevs.html
@@ -1,6 +1,6 @@
 <SELECT name="{$form}[netdevid]" id="netdevid" {tip class="lms-ui-advanced-select" text="Select network device (optional)" trigger="netdevid"}>
     <OPTION value="">{trans("- none -")}</OPTION>
     {foreach $netdevlist as $netdev}
-    <OPTION value="{$netdev.id}"{if $netdev.id == $ticket.netdevid} selected{/if}>{$netdev.name} ({$netdev.id})</OPTION>
+    <OPTION value="{$netdev.id}"{if isset($ticket.netdevid) && $netdev.id == $ticket.netdevid} selected{/if}>{$netdev.name} ({$netdev.id})</OPTION>
     {/foreach}
 </SELECT>
