--- a/templates/default/netdev/netdevinfo.html
+++ b/templates/default/netdev/netdevinfo.html
@@ -27,7 +27,7 @@
 	{/if}
 {/block}
 {block name=netdevassignments}
-	{if !empty($netdev.ownerid)}
+	{if !empty($netdev.ownerid) && !empty($netdevips)}
 		{include file="customer/customerassignments.html" tab_label=trans("Network Device Liabilities:")}
 	{/if}
 {/block}
