improvement: color unification of node/netdevices status

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -974,9 +974,9 @@
 .lms-ui-icon-netdevon {
   .lms-ui-icon-netdevice;
   text-stroke-width: 1px;
-  text-stroke-color: gold;
+  text-stroke-color: limegreen;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: gold;
+  -webkit-text-stroke-color: limegreen;
 }
 
 .lms-ui-icon-netdevunk {
