improvement: allow to set pagelimit for vlanlist form (phpui.vlanlist_pagelimit, default: 100)

--- a/templates/default/vlan/vlanlist.html
+++ b/templates/default/vlan/vlanlist.html
@@ -4,7 +4,7 @@
 
 <h1>{$pagetitle|escape}</h1>
 
-<table class="lmsbox lms-ui-background-cycle lms-ui-datatable">
+<table class="lmsbox lms-ui-background-cycle lms-ui-datatable" data-page-length="{$pagelimit}">
     <thead>
         <tr class="bold">
             <td>
